logic and functionality done

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,11 @@
-# Application
-APP_NAME=AI Project
-DEBUG=False
+OPENAI_API_KEY=your-openai-api-key-here
+OPENAI_MODEL=gpt-5.1
 
-# MongoDB
 MONGODB_URI=mongodb://localhost:27017
-MONGODB_DATABASE=ai_project
+# For MongoDB Atlas, use: mongodb+srv://username:password@cluster.mongodb.net/
+MONGODB_DB=procurement
+MONGODB_COLLECTION=purchases
 
-# OpenAI
-OPENAI_API_KEY=your-api-key-here
-OPENAI_MODEL=gpt-4
+DATASET_CSV_PATH=./data/procurement.csv
 
-# API
-API_HOST=0.0.0.0
-API_PORT=8000
+APP_ENV=local
